syntax = "proto3";

option java_package = "me.amiralles.category.stubs";
option java_multiple_files = true;

service CategoryService {
  rpc getCategory (GetCategoryRequest) returns (GetCategoryResponse);
}

message Category {
  int64 id = 1;
  int32 category = 2;
  string name = 3;
  string description = 4;
}

message GetCategoryRequest {
  Category category = 1;
}

message GetCategoryResponse {
  string ack = 1;
}
